syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

// Register 
message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2;
}

// Login
message LoginRequest {
    string email = 1;
    string password = 2;
    string firebaseidtoken = 3;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

// ValidateToken
message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    int64 status = 1;
    string error = 2;
    string userId = 3;
}
